force-app/main/default/objects/IntegrationConfig__c/IntegrationConfig__c.object-meta.xml
<CustomObject>
    <description>Configuration object for managing multi-org integrations with AI-powered mapping and conflict resolution</description>
    <label>Integration Configuration</label>
    <nameField>
        <displayFormat>INT-{00000}</displayFormat>
        <label>Integration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>