force-app/main/default/objects/IntegrationConfig__c/fields/ConflictResolution__c.field-meta.xml
<CustomField>
    <fullName>ConflictResolution__c</fullName>
    <description>AI-powered conflict resolution rules and strategies</description>
    <inlineHelpText>Einstein AI generated conflict resolution rules for data conflicts</inlineHelpText>
    <label>Conflict Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>