force-app/main/default/objects/IntegrationConfig__c/fields/FieldMapping__c.field-meta.xml
<CustomField>
    <fullName>FieldMapping__c</fullName>
    <description>AI-generated field mapping configuration</description>
    <inlineHelpText>Einstein AI generated field mappings between source and target objects</inlineHelpText>
    <label>Field Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>