force-app/main/default/objects/IntegrationConfig__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable or disable this integration configuration</description>
    <inlineHelpText>Check to enable this integration configuration</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>