force-app/main/default/objects/IntegrationConfig__c/fields/LastSyncTime__c.field-meta.xml
<CustomField>
    <fullName>LastSyncTime__c</fullName>
    <description>Timestamp of the last successful synchronization</description>
    <inlineHelpText>Automatically updated when synchronization completes successfully</inlineHelpText>
    <label>Last Sync Time</label>
    <type>DateTime</type>
</CustomField>