force-app/main/default/objects/IntegrationConfig__c/fields/ObjectMapping__c.field-meta.xml
<CustomField>
    <fullName>ObjectMapping__c</fullName>
    <description>JSON configuration for object mapping between source and target orgs</description>
    <inlineHelpText>AI-generated object mapping configuration in JSON format</inlineHelpText>
    <label>Object Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>