force-app/main/default/objects/IntegrationConfig__c/fields/SourceOrg__c.field-meta.xml
<CustomField>
    <fullName>SourceOrg__c</fullName>
    <description>Source Salesforce org identifier for integration</description>
    <inlineHelpText>Enter the source org identifier (org URL or custom identifier)</inlineHelpText>
    <label>Source Org</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>