force-app/main/default/objects/IntegrationConfig__c/fields/SuccessRate__c.field-meta.xml
<CustomField>
    <fullName>SuccessRate__c</fullName>
    <description>Integration success rate percentage calculated by AI analytics</description>
    <inlineHelpText>AI-calculated success rate based on historical integration performance</inlineHelpText>
    <label>Success Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>