force-app/main/default/objects/IntegrationConfig__c/fields/TargetOrg__c.field-meta.xml
<CustomField>
    <fullName>TargetOrg__c</fullName>
    <description>Target Salesforce org identifier for integration</description>
    <inlineHelpText>Enter the target org identifier (org URL or custom identifier)</inlineHelpText>
    <label>Target Org</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>